--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <img src="./img/n1.avif" class="card-img-top" alt="Landing Page">
-            <a href="./landing/landing/index.html">ver</a>
+            <a href="./landing/landing/index.html" style="text-align: center;">ver</a>
             <div class="card-body">
               <h5 class="card-title">Landing Page</h5>
               <p class="card-text">Página moderna con diseño responsive usando Flexbox.</p>
@@ -51,7 +51,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <img src="./img/2bootstrap.jpg" class="card-img-top" alt="Bootstrap">
-            <a href="./Bootstrap/index.html">ver</a>
+            <a href="./Bootstrap/index.html" style="text-align: center;">ver</a>
             <div class="card-body">
               <h5 class="card-title">Diseño con Bootstrap</h5>
               <p class="card-text">Componentes visuales con Bootstrap 5 para sitios atractivos.</p>
@@ -64,7 +64,7 @@
         <div class="col-md-4 mb-4">
             <div class="card h-100">
               <img src="./img/3.Flexbox" class="card-img-top" alt="Bootstrap">
-              <a href="./contenido con Flex/Iguana page/index.html">ver</a>
+              <a href="./contenido con Flex/Iguana page/index.html" style="text-align: center;">ver</a>
               <div class="card-body">
                 <h5 class="card-title">Diseño Flex</h5>
                 <p class="card-text">Diseño responsivo usando Flexbox para organizar contenido de forma adaptable y moderna..</p>
@@ -78,7 +78,7 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100">
             <img src="./img/foto de git.jpg" class="card-img-top" alt="GitHub">
-            <a href="./micv-main/index.html">ver</a>
+            <a href="./micv-main/index.html" style="text-align: center;">ver</a>
             <div class="card-body">
               <h5 class="card-title">Proyecto en GitHub</h5>
               <p class="card-text">Versionado del código usando Git y despliegue en GitHub Pages.</p>
