--- a/index.html
+++ b/index.html
@@ -12,7 +12,23 @@
 
 
 </head>
-<body>
+  <body data-bs-spy="scroll" data-bs-target="#goTop" data-bs-offset="80" tabindex="0">
+    <div id="topbar" class="topbar"></div>
+  <nav class="navbar navbar-expand-lg nav-es navbar-dark fixed-top">
+  <div class="container-fluid">
+    <!-- Barra superior-->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav nav-tabs">
+        <li class="nav-item"><a class="nav-link" href="#sobre-mi" style="color: #ffffff;">Sobre Mí</a></li>
+        <li class="nav-item"><a class="nav-link" href="#proyectos"style="color: #ffffff;">Proyectos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#habilidades"style="color: #ffffff;">Habilidades</a></li>
+      </ul>
+    </div>
+</nav>
   <!-- INICIO -->
   <section class="hero d-flex justify-content-between align-items-center p-5">
     <div>
