--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 
-
 </head>
   <body data-bs-spy="scroll" data-bs-target="#goTop" data-bs-offset="80" tabindex="0">
     <div id="topbar" class="topbar"></div>
@@ -23,7 +22,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav nav-tabs">
-        <li class="nav-item"><a class="nav-link" href="#sobre-mi" style="color: #ffffff;">Sobre Mí</a></li>
+        <li class="nav-item"><a class="nav-link" href="./index.html" style="color: #ffffff;">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="#proyectos"style="color: #ffffff;">Proyectos</a></li>
         <li class="nav-item"><a class="nav-link" href="#habilidades"style="color: #ffffff;">Habilidades</a></li>
       </ul>
@@ -229,5 +228,8 @@
       </a>
     </div>
   </footer>
-  <!--mejorando oooo-->
+  </div>
+  </body>
+</html>
+
   
